# DatalogInterpreter

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  BlockCommentAutomaton.cpp  CMakeLists.txt  CommaAutomaton.cpp  DataLogProgram.cpp  DataLogProgram.h  Database.cpp  Database.h  FactsAutomaton.cpp  Header.cpp  Header.h  IDAutomaton.h  Interpreter.cpp  Interpreter.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  MultiplyAutomaton.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  Predicate.cpp  Predicate.h  Q_MarkAutomaton.cpp  Q_MarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  Relation.cpp  Relation.h  RightParenAutomaton.cpp  RightParenAutomaton.h  Rule.h  RulesAutomaton.cpp  SchemesAutomaton.cpp  (+8 more)
1_Lexer/: Lexer.h
1_Lexer/Automata/: BlockCommentAutomaton.h  CommaAutomaton.h  FactsAutomaton.h  IDAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.h  RulesAutomaton.h  StringAutomaton.cpp  Token.cpp
2_Parser/: DataLogProgram.h  Parameter.h  Parser.h  Predicate.cpp  Rule.cpp  Rule.h
3_Interpreter/: Database.h  Interpreter.cpp  Interpreter.h  Relation.cpp  Relation.h  Tuple.h
lab1.dSYM/Contents/Resources/DWARF/: lab1
lab2.dSYM/Contents/Resources/DWARF/: lab2
